AddUriActivity complete